[gd_scene load_steps=9 format=3 uid="uid://ejy7ro7rm0g"]

[ext_resource type="PackedScene" uid="uid://cwqxuuiv3equs" path="res://user_interface.tscn" id="1_freef"]
[ext_resource type="Script" path="res://game_master.gd" id="1_qn78f"]
[ext_resource type="PackedScene" uid="uid://bogoncn55a0sh" path="res://volleyball.tscn" id="2_w1b5w"]
[ext_resource type="Script" path="res://volleyball_manager.gd" id="3_p3p8h"]
[ext_resource type="PackedScene" uid="uid://c5i7dyq46336k" path="res://volleyball_court.tscn" id="4_726u5"]
[ext_resource type="PackedScene" uid="uid://3ydr5e2okwg" path="res://player.tscn" id="5_4oevl"]
[ext_resource type="Texture2D" uid="uid://dsbsiko8ukwjx" path="res://circle.png" id="6_1qqs6"]
[ext_resource type="Resource" uid="uid://bleh1qmxhkpu" path="res://default_controller_config.tres" id="8_tmlws"]

[node name="GameMaster" type="Node" node_paths=PackedStringArray("red_team", "blue_team")]
script = ExtResource("1_qn78f")
red_team = NodePath("RedTeam")
blue_team = NodePath("BlueTeam")
blue_ball_spawn_point = Vector3(-5, 1, -2)
red_ball_spawn_point = Vector3(5, 1, 2)

[node name="VolleyballManager" type="Node" parent="."]
script = ExtResource("3_p3p8h")
volleyball_scene = ExtResource("2_w1b5w")

[node name="LandingIndicator" type="Node3D" parent="VolleyballManager"]

[node name="Sprite3D" type="Sprite3D" parent="VolleyballManager/LandingIndicator"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.05, 0)
modulate = Color(0.70677, 0.000138905, 0.622373, 1)
axis = 1
texture = ExtResource("6_1qqs6")

[node name="UserInterface" parent="." instance=ExtResource("1_freef")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10)

[node name="VolleyballCourt" parent="." instance=ExtResource("4_726u5")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.65317, -0.574938, 0.492764, -9.61756e-09, 0.650761, 0.759283, -0.757212, -0.49594, 0.425057, 1.98433, 7, 0)
shadow_enabled = true

[node name="BlueTeam" type="Node" parent="."]

[node name="Player" parent="BlueTeam" instance=ExtResource("5_4oevl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -1)
controller_config = ExtResource("8_tmlws")

[node name="Player3" parent="BlueTeam" instance=ExtResource("5_4oevl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 2)
controller_config = ExtResource("8_tmlws")

[node name="RedTeam" type="Node" parent="."]

[node name="Player2" parent="RedTeam" instance=ExtResource("5_4oevl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.7937, 0, 1.17064)

[node name="Player4" parent="RedTeam" instance=ExtResource("5_4oevl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.7937, 0, -1.82936)

[connection signal="ball_is_hittable" from="VolleyballManager" to="." method="_on_volleyball_manager_ball_is_hittable"]
[connection signal="ball_refresh" from="VolleyballManager" to="." method="_on_volleyball_manager_ball_refresh"]
